aks-kaito/streamlit-chatbot/ingress-streamlit-chatbot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-chatbot-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /chatbot
            pathType: Prefix
            backend:
              service:
                name: streamlit-chatbot
                port:
                  number: 80
